# cairn

./: .gitignore  CLAUDE.md  MAP.md  pyproject.toml  superclaude
cairn/: __init__.py
cairn/base/: __init__.py  callback.py  core_values.py  device.py  diagnostic.py  history.json  intention+why.json  shim.py  state.json  transitions.py
cairn/bus/: __init__.py  bus.py  history.json  intention+why.json  state.json
cairn/charter/: intention+why.json  projector.py
cairn/db_domain/: history.json  intention+why.json  state.json  store.py
cairn/diagnostic_inspector/: __init__.py  history.json  inspector.py  intention+why.json  state.json
cairn/diagnostic_interpreter/: __init__.py  history.json  intention+why.json  interpreter.py  state.json
cairn/ground_loop/: __init__.py  history.json  intention+why.json  loop.py  registry.py  state.json
cairn/harbor_master/: clearance.py  history.json  intention+why.json  register.py  registry.py  state.json
cairn/inference_domain/: domain.py  history.json  intention+why.json  state.json
cairn/intentions_model_compiler/: compiler.py  history.json  intention+why.json  recompile_gate.sh  state.json
cairn/sudo_relay/: __init__.py  daemon.py  history.json  intention+why.json  relay.py  state.json
cairn/system_rackmount/: history.json  intention+why.json  rackmount.py  state.json
cairn/tester/: device.py  history.json  (+4 more)
launchers/: intention+why.json  superclaude
learning/: gate_view.py  intention+why.json
press_office/: IntentionBasedDesignForHumans.md  IntentionsBasedProgrammingClaudeFileTree.md  intention+why.json
(+80 files in other folders)
